# remove-bom-rs

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
