[package]
description = "a command line tool to remove BOM in utf8 files"
name = "remove-bom"
version = "0.1.0"
license = "BSD"
repository = "https://github.com/hyqhyq3/remove-bom-rs"
authors = ["hyq"]

[[bin]]
name="remove-bom"
path="src/main.rs"

[dependencies]
walkdir = "2"
structopt = "0.2"
regex = "0.2"